<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMyBackground"
    tools:context=".HelpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textColor="#ffffff"
                android:layout_marginBottom="10dp"
                android:text="@string/help_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="@string/help_2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:justificationMode="inter_word"
                android:text="@string/help_3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:justificationMode="inter_word"
                android:text="@string/help_4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginStart="30dp"
                android:textSize="16sp"

                android:layout_marginBottom="10dp"
                android:justificationMode="inter_word"
                android:text="@string/help_5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="@string/help_6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:text="@string/studenci"/>

            <ProgressBar
                android:id="@+id/studenci_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:maxHeight="10dip"
                android:minHeight="10dip"
                android:progress="50"
                android:progressDrawable="@drawable/student_progress_bar"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:text="@string/profesorowie"/>

            <ProgressBar
                android:id="@+id/profesorowie_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:maxHeight="10dip"
                android:minHeight="10dip"
                android:progress="50"
                android:progressDrawable="@drawable/profesor_progress_bar"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:text="@string/m_odzi_doktorzy"/>

            <ProgressBar
                android:id="@+id/doktorzy_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:maxHeight="10dip"
                android:minHeight="10dip"
                android:progress="50"
                android:progressDrawable="@drawable/phd_progress_bar"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:text="@string/help_7"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:text="@string/help_8"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="14dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="10dp"
                android:textSize="24sp"
                android:text="@string/help_9"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="30dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:text="@string/help_10"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tutorial"
                android:layout_marginBottom="16dp"
                android:src="@drawable/smartphone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="30dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:text="@string/help_11"/>

        </LinearLayout>

    </ScrollView>



</FrameLayout>