<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMyBackground"
    tools:context=".EndGameFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:text="@string/s_end_of_game" />

        <TextView
            android:id="@+id/stats_text"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:textColor="#ffffff"
            android:text="@string/rozwa_y_e_20_przepis_w"/>

        <TextView
            android:id="@+id/ending_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:layout_marginStart="8dp"
            android:justificationMode="inter_word"
            android:text="@string/great_ending"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


            <Button
                android:id="@+id/restart_game_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zagraj_ponownie" />


    </LinearLayout>

</FrameLayout>